iac/node-1.tf
resource "aws_instance" "node-1" {
  ami           = var.amiID[var.region]
  instance_type = "t2.micro"
  key_name      = "blocks-key"
  vpc_security_group_ids = [
    aws_security_group.blocks-sg.id,
    aws_security_group.wazuh_stack.id
  ]
  availability_zone = var.zone
  private_ip        = "172.31.80.11"
  subnet_id = "subnet-0d312da63588f1958"

  tags = {
    Name    = "node-1"
    Project = "blocks-lab"
  }
}

output "victim-public-ip" {
  value = aws_instance.node-1.public_ip
}
